# almanak

./: .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bot/: telegram_bot.py
scripts/: enrich.py  index.py  seed.py
src/open_benchmark/: __init__.py  config.py
src/open_benchmark/enrich/: __main__.py
src/open_benchmark/extractor/: classify.py  fetch.py
src/open_benchmark/extractor/providers/: __init__.py  _github.py  _hn.py  _twitter.py  _youtube.py
src/open_benchmark/extractor/providers/custom/: example.py
src/open_benchmark/graph/: relations.py
src/open_benchmark/indexer/: qdrant_index.py
src/open_benchmark/ingest/: __main__.py  api.py
src/open_benchmark/mcp_server/: __main__.py  server.py  tools.py
src/open_benchmark/storage/: db.py
tests/: test_smoke.py
