[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "almanak"
version = "1.0.0"
description = "AlManak — self-hosted AI memory for the links that matter"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "mcp[cli]>=1.6",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "starlette>=0.37",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "qdrant-client>=1.9",
    "fastembed>=0.3",
    "trafilatura>=1.10",
]

[project.optional-dependencies]
bot = ["requests>=2.31"]
dev = ["pytest>=8", "httpx>=0.27", "pytest-asyncio>=0.23"]

[project.scripts]
almanak-mcp    = "open_benchmark.mcp_server.server:main"
alamanak-ingest = "open_benchmark.ingest.api:main"
alamanak-index  = "scripts.index:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
